Small change to avoid new logbook description to overflow fieldset on chrome due to user agent issues

--- a/elogy/frontend/src/logbookeditor.css
+++ b/elogy/frontend/src/logbookeditor.css
@@ -14,7 +14,7 @@
     flex-direction: column;
 }
 
-#logbookeditor form > fieldset.description {
+#logbookeditor form > fieldset.description input {
     flex: 1;
     height: 100%;    
 }
